# src/main/java/au/gov/nsw/revenue/transferregistrationservice/entities/PersonEntity.java
@@ -1,0 +1,18 @@
+package au.gov.nsw.revenue.transferregistrationservice.entities;
+
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+@JsonIgnoreProperties(ignoreUnknown = true)
+public class PersonEntity {
+    private String emailId;
+    private String mobileNumber;
+    private String password;
+}
